<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewPostActivity">

    <EditText
        android:id="@+id/edittext_newId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edittext_newUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userId"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edittext_newTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/edittext_newBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_save"/>
</LinearLayout>