<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_get"/>

    <EditText
        android:id="@+id/edittext_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/id" />

    <Button
        android:id="@+id/button_getParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_getParam"
        android:layout_marginTop="5dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>
</LinearLayout>